--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
+    "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
